Fix overflow bugs

--- a/styles/landing-page.module.css
+++ b/styles/landing-page.module.css
@@ -13,6 +13,7 @@
 .landingPage {
   background-color: #fff;
   font-family: "Inter", sans-serif;
+  overflow-x: hidden;
 }
 
 .pageHero {
